tests/negative/export_cyclic6_d.toit
// Copyright (C) 2018 Toitware ApS. All rights reserved.

import .export_cyclic6_b
export *
